# spinda-searcher

./: .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: main.yml
